--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "better-scroll": "^1.2.3",
     "jquery": "^3.2.1",
     "vue": "^2.4.2",
+    "vue-layer": "^0.8.4",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
